# RAstra-deprecated

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  settings.toml
.github/workflows/: build_x86_64-pc-windows-msvc_rust.yml  rust.yml  wiki.yml
bedrock-rs/: Cargo.toml
bedrock-rs/bedrock_core/src/: fmt.rs  from.rs  lib.rs  types.rs
bedrock-rs/protocol/: Cargo.toml
bedrock-rs/protocol/src/: batch.rs  client.rs  conn.rs  encryption.rs  error.rs  gamepacket.rs  info.rs  lib.rs  listener.rs  login.rs
bedrock-rs/protocol/src/compression/: mod.rs  none.rs  snappy.rs  zlib.rs
bedrock-rs/protocol/src/packets/: NetworkSettings.rs  NetworkSettingsRequest.rs  handshake_server_to_client.rs  login.rs  mod.rs  network_settings.rs  network_settings_request.rs
bedrock-rs/protocol/src/types/: connection_request.rs  mod.rs
bedrock-rs/protocol_core/: Cargo.toml
bedrock-rs/protocol_core/src/: error.rs  gamepacket.rs  info.rs  lib.rs  types.rs
bedrock-rs/protocol_core/src/io/: mod.rs  packet_reader.rs  packet_writer.rs
bedrock-rs/protocol_derive/: Cargo.toml
bedrock-rs/protocol_derive/src/: lib.rs
bedrock-rs/serialize/: Cargo.toml
bedrock-rs/serialize/src/: error.rs  lib.rs  types.rs
bedrock-rs/serialize/src/de/: mod.rs
bedrock-rs/serialize/src/proto/: error.rs  types.rs
bedrock-rs/serialize/src/proto/de/: mod.rs
bedrock-rs/serialize/src/proto/ser/: mod.rs
bedrock-rs/serialize/src/ser/: mod.rs
bedrock-rs/serialize_derive/src/: de.rs  lib.rs  ser.rs
bedrock-rs/serialize_derive/src/proto/: de.rs  ser.rs
bedrock-rs/src/: lib.rs
bedrock-rs_test/: Cargo.toml
bedrock-rs_test/src/: main.rs
bedrock_protocol/basics/: index.html
bedrock_protocol/overview/: index.html
cli/basics/: index.html
cli/commands/: index.html
docs/: index.md
docs/bedrock_protocol/: basics.md
docs/cli/: basics.md  commands.md
docs/plugins/: overview.md
docs/ui/: example.md
plugins/functions/: index.html
plugins/overview/: index.html
rak-rs/: Cargo.toml  LICENSE.md  README.md
rak-rs/examples/: README.md
rak-rs/resources/: header.css  header.html
rak-rs/src/: lib.rs
rak-rs/src/client/: discovery.rs  handshake.rs  mod.rs  util.rs
rak-rs/src/connection/: mod.rs
rak-rs/src/connection/queue/: mod.rs  send.rs
rak-rs/src/notify/: mod.rs
rak-rs/src/protocol/: ack.rs  frame.rs  mod.rs
rak-rs/src/protocol/mcpe/: mod.rs
rak-rs/src/protocol/packet/: mod.rs  offline.rs  online.rs
rak-rs/src/server/: mod.rs
rak-rs/src/util/: mod.rs
search/: search_index.json
src/: conn.rs  error.rs  main.rs  player.rs  server.rs  tick.rs
src - Copy/: conn.rs  error.rs  main.rs  player.rs  server.rs
src - Copy/logger/: logger.rs
src - Copy/network/: packet_io.rs
src - Copy/network/packet/: packet_info.rs
src - Copy/raknet/: arq.rs  mod.rs  server.rs  utils.rs
src - Copy/utils/: device.rs  endian.rs  mod.rs
src - Copy/utils/skin/: arm_size.rs  skin.rs
src/checker/: check_startup_files.rs  default_rastra.toml  mod.rs
src/cli/: cli.rs  mod.rs
src/cli/command/: cli_command.rs  mod.rs
src/cli/command/instance/: args.rs  help.rs  mod.rs
src/cli/command/registry/: mod.rs  register.rs  registry.rs
src/config/: config.rs
src/gamemode/: gamemode.rs  mod.rs
src/logger/: logger.rs
src/motd/: update.rs
src/network/: batching.rs  conn.rs  conn_handle.rs  conn_info.rs  gamepacket.rs  listener.rs  mod.rs  packet_handle.rs  packet_info.rs  packet_io.rs
src/network/connection/: connection.rs
src/network/login/: handle.rs  handshake.rs  login.rs  mod.rs  network_settings.rs  packs.rs  play_status.rs  start_game.rs
src/network/packet/: mod.rs  packet_login.rs  packet_network_settings.rs  packet_request_network_settings.rs
src/network/packet_handlers/: mod.rs  packet_handler_request_network_settings.rs
src/network/packet_io/: mod.rs  packet_io_reader.rs  packet_io_writer.rs
src/network/traits/: decode.rs  encode.rs
src/network/utils/: batching.rs  compression.rs  encryption.rs  handler.rs  mod.rs
src/raknet/: Cargo.toml  arq.rs  error.rs  fragment.rs  log.rs  mod.rs  packet.rs  socket.rs
src/raknet/src/: arq.rs  datatype.rs  error.rs  fragment.rs  packet.rs  server.rs  socket.rs  utils.rs
src/utils/: color.rs  compression.rs  compression_method.rs  device.rs  lang.rs  mod.rs  play_status.rs  vec.rs
src/utils/skin/: arm_size.rs  cape.rs  mod.rs  skin.rs
ui/example/: index.html
