[package]
name = "RAstra"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
bedrock-rs = { path = "bedrock-rs" }

tokio = { version = "1.35.1", features = ["full"] }
varint-rs = { version = "2.2.0", features = ["signed"]}
bytes = "1.5.0"
byteorder = "1.4.3"
rand = "0.8.5"
uuid = "1.8.0"
toml = "0.8.12"
async_once = "0.2.6"
lazy_static = "1.4.0"
input-macro = "0.2.0"
async-trait = "0.1.79"
chrono = "0.4.37"

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.115"

flate2 = "1.0.28"
snap = "1.1.1"

jsonwebtoken = { version = "9.3.0"}
ecdsa = { version = "0.16.9", features = ["pkcs8", "signing", "serde", "der", "arithmetic", "pem", "sha2", "dev", "digest", "alloc", "default", "hazmat", "serdect", "verifying", "rfc6979", "spki", "std"]}
p384 = { version = "0.13.0", features = ["pkcs8", "ecdsa", "arithmetic", "serde", "pem", "hash2curve", "std", "sha2", "sha384", "jwk", "bits", "ecdh", "digest", "ecdsa-core", "serdect", "hex-literal", "alloc", "expose-field", "default", "test-vectors", "voprf"]}

base64 = "0.22.0"

crypto = { version = "0.5.1", features = ["cipher"] }
sha2 = "0.10.8"
aes = "0.8.4"
ctr = "0.9.2"
block-padding = "0.3.3"
signature = "2.2.0"
log = "0.4.21"

[dependencies.rak-rs]
version = "0.3.2"
default-features = false
features = [ "async_tokio", "mcpe" ]
path = "rak-rs"

