[package]
name = "bedrock-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bedrock_core = { path = "bedrock_core" }
protocol_core = { path = "protocol_core" }
protocol_derive = { path = "protocol_derive" }
