[package]
name = "bedrock-rs_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bedrock-rs = { path = "../bedrock-rs" }


tokio = { version = "1.37.0", features = ["full"] }
raknet-rs = { version = "0.1.1", features = ["tokio-udp"] }
bytes = "1.6.0"
futures-util = "0.3.30"