[package]
name = "bedrock-rs_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bedrock-rs = { path = "../bedrock-rs" }

tokio = { version = "1.37.0", features = ["full"] }
byteorder = "1.5.0"
futures-util = "0.3.30"
rand = "0.8.5"
varint-rs = "2.2.0"
