[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bedrock_core = { path = "../bedrock_core" }
serialize = { path = "../serialize" }
serialize_derive = { path = "../serialize_derive" }

bytes = "1.6.0"
varint-rs = "2.2.0"
