[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bedrock_core = { path = "../bedrock_core" }
serialize = { path = "../serialize" }
serialize_derive = { path = "../serialize_derive" }

byteorder = "1.5"
varint-rs = "2.2"
jsonwebtoken = "9.3"
ring = { version = "0.17" }
rand = "0.8"
serde_json = "1.0"
rak-rs = { version = "0.3", default-features = false, features = ["tokio", "mcpe"] }
tokio = { version = "1", features = ["full"] }

flate2 = "1.0"
snap = "1.1"